# Container-Server

./: .env.sample  .gitignore  Cargo.toml  README.md  requirements.txt  shell.nix
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
src/: args.rs  data.rs  download.rs  file_ops.rs  main.py  main.rs  matcher.rs  unraid_templates.py  utils.py
