[package]
name = "container_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
strsim = "0.11"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5"
dotenvy = "0.15"
